--- a/relay/relay-auth/package.json
+++ b/relay/relay-auth/package.json
@@ -45,6 +45,7 @@
     "husky": "^4.3.0",
     "key-did-resolver": "^2.0.4",
     "typescript": "^4.9.5",
+    "uint8arrays": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
@@ -62,8 +63,9 @@
   "dependencies": {
     "@exodus/walletconnect-safe-json": "^1.0.2-exodus.0",
     "@exodus/walletconnect-time": "^1.0.2-exodus.0",
+    "base64-js": "^1.5.1",
+    "bs58": "^5.0.0",
     "tslib": "1.14.1",
-    "tweetnacl": "^1.0.3",
-    "uint8arrays": "^3.0.0"
+    "tweetnacl": "^1.0.3"
   }
 }
