--- a/misc/safe-json/package.json
+++ b/misc/safe-json/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@exodus/walletconnect-safe-json",
   "description": "Safe Json Utils",
-  "version": "1.0.2-exodus.1",
+  "version": "1.0.2-exodus.2",
   "author": "WalletConnect, Inc. <walletconnect.com>",
   "license": "MIT",
   "keywords": [
@@ -57,7 +57,7 @@
     "trailingComma": "es5"
   },
   "dependencies": {
-    "json-bigint": "^1.0.0",
+    "@exodus/json-bigint-nobignumber": "^1.0.0-exodus.0",
     "tslib": "1.14.1"
   }
 }
