--- a/jsonrpc/utils/package.json
+++ b/jsonrpc/utils/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "@exodus/walletconnect-environment": "^1.0.1-exodus.0",
     "@exodus/walletconnect-jsonrpc-types": "^1.0.3-exodus.0",
-    "tslib": "1.14.1"
+    "big-integer": "1.6.36"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
