--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
+          registry-url: 'https://registry.npmjs.org' 
           node-version: 16
 
-      - name: Authenticate with private NPM package
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
       - name: Check node_modules cache
         id: cache-node-modules
         uses: actions/cache@v3
@@ -27,9 +26,13 @@ jobs:
 
       - name: Install NPM Dependencies
         run: npm install
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Bootstrap packages
         run: npm run bootstrap
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Lint
         run: npm run lint
